# sphinx-helpers

./: .gitignore  .pre-commit-config.yaml  Makefile  noxfile.py  pyproject.toml
src/sphinx_helpers/: builders.py  writer.py
src/sphinx_helpers/ext/: markdown.py
tests/: conftest.py  test_build_markdown.py
tests/markdown-only/: code.rst  conf.py  index.rst
tests/markdown-with-header/: conf.py
tests/markdown-with-manifest/: conf.py  index.rst
tests/markdown-with-metadata/: conf.py  doc1.rst
tests/markdown-with-metadata-title/: conf.py
tests/reference/: code.md  doc1.md  doc1.md.manifest.json  doc1.md.metadata.json.alt  index.md.metadata.json
tests/source/: code.rst  doc1.rst
